 2.6.6 - DD/MMM/2006
----------------------------------------------------------------------

 - Updated translations (fr, sr).
 - Fixed broken Socks5/HTTP... *sigh*.
 - Fixed the invisible cursor color when using GTKSpell and a black
   input box (when "Use the text box font & colors" is ON).
 - Allow loading a cert/privatekey file from ~/.xchat2/<NetWorkName>.pem
 - 
 - 
 - 
 - Perl (Lian Wan Situ)
  * Fixed a bug with Xchat::print that prevents printing out a
    single 0(Lian Wan Situ)
  * Fixed a bug in Xchat::get_prefs that was clobbering the stack(Sergio Luis)


----------------------------------------------------------------------
 2.6.4 - 08/Jun/2006
----------------------------------------------------------------------

 - Updated translations (de, el, es, gl, hu, nl, sv, vi, zh_TW).
 - Fixed opening a irc:// URL via "xchat -a --url=abc123" command while
   "Skip serverlist on startup" is off. This fix is only relevant when
   opening an initial instance of xchat (i.e not via dbus).
 - Fixed the tree layout "flashing" (redrawing slowly) after you
   switched to tabs and back to tree.
 - Fixed plugin/script get_list("users") causing a critical GDK warning
   when not executed from the front-most tab.
 - Added spelling support in the input-box via GTKSpell.
 - Improved the error reporting when connecting through a Socks proxy.
 - DCC file transfers via http/socks45/wingate proxy is now supported
   (Damjan Jovanovic & me).
 - Fixed Socks 5 failing on 64-bit CPUs.
 - Added support for connecting through a Microsoft ISA Proxy, requires
   libntlm at build time (Pavel Fedin).
 - You can now mark and copy timestamps if you hold down SHIFT.
 - Timestamps are now preserved in the /lastlog command. Also fixed a
   bug where the separator line disappeared during /lastlog.
 - Added a Browse button to the DCC download folder setting.
 - Made the setup window a little neater and Gnome-like.
 - Improved the notify window a little and fixed a small memory leak.